# carma-py-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  carma_examples.py  cibuilwheel.sh  pyproject.toml  setup.py
.github/workflows/: wheels.yml
scripts/: install_linux_libs.sh  install_windows_libs.ps1
src/: example_bindings.cpp
src/carma_py_example/: __init__.py
tests/: test_carma.py
